fix: update selection colors for better visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,8 +33,8 @@ body{
 }
 
 ::selection {
-  background: var(--maincolor);
-  color: #fff;
+  background: yellow;
+  color: var(--maincolor);
 }
 
 p {
